Fix chrome scrollbars

--- a/incremental/Cavernous/style.css
+++ b/incremental/Cavernous/style.css
@@ -75,7 +75,7 @@ body {
 	display: inline-block;
 	vertical-align: top;
 	width: 100%;
-	height: 28px;
+	height: min-content;
 	border: 1px solid #00000077;
 	border-radius: 5px;
 	padding: 2px;
@@ -84,6 +84,14 @@ body {
 	scrollbar-width: thin;
 	scrollbar-color: #88aaaa #aacccc;
 	white-space: nowrap;
+}
+
+.bottom-block::-webkit-scrollbar {
+	height: 8px;
+}
+
+.bottom-block::-webkit-scrollbar-thumb {
+	background-color: #88aaaa;
 }
 
 .queue-inner {
